Opened 9 years ago

Closed 9 years ago

#4291 closed defect (fixed)

16 bit tiff images are not read correctly.

Reported by: str Owned by:
Priority: normal Component: avcodec
Version: unspecified Keywords:
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

Summary of the bug: 16 bit tiff images are not read correctly.
How to reproduce:

% ffmpeg -i input ... output
ffmpeg-2.2.2
built on Windows7x64

Attachments (1)

myimage7300.tif (2.1 MB ) - added by str 9 years ago.

Change History (2)

by str, 9 years ago

Attachment: myimage7300.tif added

comment:1 by Elon Musk, 9 years ago

Resolution: fixed
Status: newclosed

should be fixed in:

|\ Merge: 9fd925d 50144b9
| | Author: Michael Niedermayer <michaelni@gmx.at>
| | AuthorDate: Fri Jan 30 19:01:53 2015 +0100
| | Commit: Michael Niedermayer <michaelni@gmx.at>
| | CommitDate: Fri Jan 30 19:01:56 2015 +0100
| |
| | Merge remote-tracking branch 'cehoyos/master'
| |
| | * cehoyos/master:
| | Respect horizontal differencing predictor for 16bit gray tiff images.
| |
| | Merged-by: Michael Niedermayer <michaelni@gmx.at>
| |
| * commit 50144b91ea50757c57c94a3927bf14a6ffea0de8
| | Author: Carl Eugen Hoyos <cehoyos@ag.or.at>
| | AuthorDate: Fri Jan 30 14:12:55 2015 +0100
| | Commit: Carl Eugen Hoyos <cehoyos@ag.or.at>
| | CommitDate: Fri Jan 30 14:12:55 2015 +0100
| |
| | Respect horizontal differencing predictor for 16bit gray tiff images.
| |
| | Fixes ticket #4291.

Note: See TracTickets for help on using tickets.