Respect horizontal differencing predictor for 16bit gray tiff images.

Fixes ticket #4291.